fix scrollbar layout.

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -22,13 +22,16 @@ table {
 	border-spacing: 0;
 }
 
+html {
+	overflow-y: scroll;
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  overflow-y: scroll;
 }
 
 /* a {
